<resources>
    <string name="app_name">Flypp</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="n_o_tem_conta">Não tem conta?</string>
    <string name="clique_aqui">Clique aqui</string>
    <string name="entrar_com_google">Entrar com Google</string>
    <string name="entrar_com_facebook">Entrar com Facebook</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="email_require">E-mail precisa ser preenchido</string>
    <string name="senha_require">Senha precisa ser preenchido</string>
    <string name="aguardando_dados">Aguarde um momento, estamos verificando seus dados.</string>
    <string name="nome_e_sobrenome">Nome e sobrenome</string>
    <string name="cep">CEP</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="rua">Rua</string>
    <string name="n_mero">Número</string>
    <string name="ddd">DDD</string>
    <string name="telefone">Telefone</string>
    <string name="error">Algo deu errado. Tente novamente!</string>
    <string name="servi_o">Nome da comida</string>
    <string name="descri_o_curta">Descrição curta</string>
    <string name="descri_o_detalhada">Descrição detalhada</string>
    <string name="r">Preço</string>
    <string name="qualidades_diferenciais">Sabor ou Marca</string>

    <string-array name="estados">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
        <item>Distrito Federal</item>
    </string-array>

    <string-array name="tempo_preparo">
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>60 min</item>
        <item>90 min</item>
        <item>120 min</item>
        <item>sob enconmenda</item>
    </string-array>

    <string-array name="resposta">
        <item>1–5 minutos</item>
        <item>10–20 minutos</item>
        <item>30–40 minutos</item>
        <item>50–60 minutos</item>
    </string-array>

    <string-array name="categorias">
        <item>Todos</item>
        <item>Lanches</item>
        <item>Pizza</item>
        <item>Burguer</item>
        <item>Carnes</item>
        <item>Frangos e Aves</item>
        <item>Peixes</item>
        <item>Bolos</item>
        <item>Porções</item>
        <item>Marmitex</item>
        <item>Massas</item>
        <item>Salgados</item>
        <item>Doces</item>
        <item>Saudáveis</item>
        <item>Veganos</item>
        <item>Bebidas</item>
        <item>Nordestina</item>
        <item>Japonês</item>
        <item>Churrasco</item>
        <item>Outros</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solicitado_por">Solicitado por:</string>
    <string name="oferecido_por">Oferecido por:</string>
    <string name="observa_o">Observação:</string>


    <string name="ads_intertitial_id">ca-app-pub-2365101539319201/2422728953</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ops_ocorreu_um_erro_pode_ser_que_sua_cidade_ainda_n_o_possua_profissionais">Ops! Pode ser que sua cidade/região ainda não possua profissionais.Você pode adicionar um serviço e ser o primeiro (Clique no botão Home para atualizar).</string>
    <string name="observa_o_do_profissional">Observação do estabelecimento</string>
    <string name="geralmente_responde_em">Geralmente responde em :</string>
    <string name="palavras_chave">Palavras-chave</string>
    <string name="nacional">Nacional</string>
    <string name="local">Local</string>
    <string name="seu_servi_o_local_apenas_na_sua_cidade_ou_nacional">Seu serviço é local, apenas na sua cidade ou nacional ?</string>
    <string name="separe_as_palavras_chave_com_v_rgulas_s_o_elas_que_te_deixam_vis_veis_nas_pesquisas">Separe as Palavras-chave com vírgulas (Exemplo1,Exemplo2,Exemplo3 ). São elas que te deixam visíveis nas pesquisas.</string>
</resources>
