<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileActivity">

    <Button
        android:id="@+id/selectPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/btn_select_photo_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photoSelected"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/selectPhoto"
        app:layout_constraintEnd_toEndOf="@+id/selectPhoto"
        app:layout_constraintStart_toStartOf="@+id/selectPhoto"
        app:layout_constraintTop_toTopOf="@+id/selectPhoto" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editNomeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/nome_e_sobrenome"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoSelected">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNomeUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:hint="@string/ddd"
        app:layout_constraintStart_toStartOf="@+id/editNomeLayout"
        app:layout_constraintTop_toBottomOf="@+id/editNomeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDDD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/telefone"
        app:layout_constraintEnd_toEndOf="@+id/editNomeLayout"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/editNomeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="phone"
            android:maxLength="9" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/cep"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="number"
            android:maxLength="8" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Endereço"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <Spinner
        android:id="@+id/spinnerEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/estados"
        android:outlineSpotShadowColor="@color/colorPrimaryDark"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout5"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/cidade"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout9"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="150dp"
        android:layout_height="62dp"
        android:hint="@string/bairro"
        app:layout_constraintEnd_toEndOf="@+id/spinnerEstado"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/rua"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editRua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout10"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:hint="@string/n_mero"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout9"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout8"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSalvarInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_bg"
        android:text="Salvar"
        android:textColor="@color/textIcons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout10"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout8" />
</androidx.constraintlayout.widget.ConstraintLayout>