<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_logo_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTermos"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_btn_white"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="Termos de uso"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cl">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editEmailCadLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/e_mail"
                android:textColorHint="@color/textIcons"
                app:boxStrokeColor="@color/textIcons"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/Base.Widget.MaterialComponents.TextInputLayout.Hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmailCad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/textIcons" />

            </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/editSenhaCadLayout"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:hint="@string/senha"
       android:textColorHint="@color/textIcons"
       app:boxStrokeColor="@color/textIcons"
       app:errorEnabled="true"
       app:hintTextAppearance="@style/Base.Widget.MaterialComponents.TextInputLayout.Hint"
       app:layout_constraintEnd_toEndOf="@+id/editEmailCadLayout"
       app:layout_constraintStart_toStartOf="@+id/editEmailCadLayout"
       app:layout_constraintTop_toBottomOf="@+id/editEmailCadLayout"
       app:passwordToggleEnabled="true"
       app:passwordToggleTint="@color/textIcons">

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/editSenhaCad"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="textPassword"
           android:textColor="@color/textIcons" />

   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/editSenhaConfirmCadLayout"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:hint="@string/confirmar_senha"
       android:textColorHint="@color/textIcons"
       app:boxStrokeColor="@color/textIcons"
       app:errorEnabled="true"
       app:hintTextAppearance="@style/Base.Widget.MaterialComponents.TextInputLayout.Hint"
       app:layout_constraintEnd_toEndOf="@+id/editSenhaCadLayout"
       app:layout_constraintStart_toStartOf="@+id/editSenhaCadLayout"
       app:layout_constraintTop_toBottomOf="@+id/editSenhaCadLayout"
       app:passwordToggleEnabled="true"
       app:passwordToggleTint="@color/textIcons">

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/editSenhaConfirmCad"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="textPassword"
           android:textColor="@color/textIcons" />

   </com.google.android.material.textfield.TextInputLayout>

   <Button
       android:id="@+id/btnCad"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:background="@drawable/button_bg"
       android:text="@string/criar_conta"
       android:textColor="@color/textIcons"
       app:layout_constraintEnd_toEndOf="@+id/editSenhaConfirmCadLayout"
       app:layout_constraintStart_toStartOf="@+id/editSenhaConfirmCadLayout"
       app:layout_constraintTop_toBottomOf="@+id/editSenhaConfirmCadLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>